@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    Require hashable-1.1.2.3, which has a TypeRep instance
     Add Data/Typeable instances for ShakeOptions
     Add Data instance for Verbosity
 0.2.4
